2013-08-19  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (@t{@@unnumbered @@appendix}): mention special
	Docbook output for acknowledgements, colophon, etc.

2013-08-19  Sergey Poznyakoff  <gray@gnu.org>

	New interactive command "display-file".

	* info/session.c (info_display_file): New command.
	* info/infomap.c: Bind '=' to display-file.

2013-08-19  Sergey Poznyakoff  <gray@gnu.org>

	Don't return dir entries when called with -a.  Fix interaction of
	-a and --output.

	* info/session.c (info_follow_menus): Add debugging output
	on level 3.
	In strict mode, return NULL if no matching node was found (by
	default initial node is returned).
	(dump_nodes_to_file,dump_node_to_file): Take flags in the
	last parameter.  If DUMP_APPEND is set, append to the output
	file instead of overwriting it.
	* info/session.h (DUMP_APPEND, DUMP_SUBNODES): New flags.
	* info/filesys.c (info_file_find_next_in_path): Improve
	debugging output
	* info/info.c (all_files): Set DUMP_APPEND for all but the
	first call to dump_node_to_file.
	(main): Initialize dump_subnodes.

2013-08-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.texi (Image Syntax): a bit more about Docbook.

	* doc/info-stnd.texi (Invoking Info),
	(Variables): editing throughout.
	* info/info.c (info_short_help): use MANUAL instead of FILENAME
	for -f.  Report from Arne Babenhauserheide,
	11 Apr 2013 11:05:37.

2013-08-18  Sergey Poznyakoff  <gray@gnu.org.ua>

	Improve info -a: process manpages, filter out duplicate names.

	* info/info-utils.c (info_reference_free): New function.
	(info_free_references): Use info_reference_free.
	* info/info-utils.h (info_reference_free): New proto.
	* info/info.c (info_find_matching_files): Return
	REFERENCE **.
	(namelist_add,namelist_free): New static functions.
	(all_files): Select unique file names.
	* info/session.c (info_split_window)
	[SPLIT_BEFORE_ACTIVE]: Declare pagetop.
	(info_menu_or_ref_item): Use info_reference_free.
	(info_follow_menus): Fix processing in strict mode.