@@ -572,15 +572,16 @@ static unsigned char default_vi_like_info_keys[] =
   '8', NUL,                       A_info_add_digit_to_numeric_arg,
   '9', NUL,                       A_info_add_digit_to_numeric_arg,
   '-', NUL,                       A_info_add_digit_to_numeric_arg,
-  '=', NUL,                       A_info_display_file,
   TAB, NUL,                       A_info_move_to_next_xref,
   LFD, NUL,                       A_info_down_line,
   RET, NUL,                       A_info_down_line,
   CONTROL('a'), NUL,              A_info_beginning_of_line,
   CONTROL('b'), NUL,              A_info_scroll_backward_page_only,
+  CONTROL('c'), NUL,              A_info_abort_key,
   CONTROL('d'), NUL,              A_info_scroll_half_screen_down,
   CONTROL('e'), NUL,              A_info_down_line,
   CONTROL('f'), NUL,              A_info_scroll_forward_page_only,
+  CONTROL('g'), NUL,              A_info_display_file,
   CONTROL('k'), NUL,              A_info_up_line,
   CONTROL('l'), NUL,              A_info_redraw_display,
   CONTROL('n'), NUL,              A_info_down_line,
@@ -749,7 +750,6 @@ static unsigned char default_vi_like_info_keys[] =
   DEL, NUL,                       A_info_scroll_backward,
   '{', NUL,                       A_info_search_previous,
   '}', NUL,                       A_info_search_next,
-  CONTROL('g'), NUL,              A_info_abort_key,
   SK_ESCAPE, SK_UP_ARROW, NUL,    A_info_up_line,
   SK_ESCAPE, SK_DOWN_ARROW, NUL,  A_info_down_line,
 };
